# AI-research-assistant

./: README.md  pyproject.toml  requirements.txt
src/: .env  README.md  assistant.py  console.py  main.py
src/document_search/: __init__.py  batch.py  core.py
